<resources>

    <!-- Nombre de la aplicación -->
    <string name="app_name">M08 Amazon</string>

    <!-- Descripción genérica de las imágenes (común para todos) -->
    <string name="product_image">Imagen del producto seleccionado</string>


    <!-- Producto 1: Jamon de Bellota -->
    <string name="product_title_jamon">Jamón de Bellota</string>
    <string name="product_description_jamon">Jamón ibérico de bellota, curado durante 36 meses para un sabor inigualable. Perfecto para todo tipo de tapas y acompañamientos.</string>
    <string name="product_price_jamon">$149.99</string>

    <!-- Producto 2: PlayStation 5 -->
    <string name="product_title_ps5">PlayStation 5</string>
    <string name="product_description_ps5">La consola de nueva generación de Sony. Con gráficos impresionantes y una experiencia de juego única, la PS5 es la mejor opción para los gamers de hoy.</string>
    <string name="product_price_ps5">$499.99</string>

    <!-- Producto 3: Kit Taladro Percutor -->
    <string name="product_title_taladro">Kit Taladro Percutor</string>
    <string name="product_description_taladro">Taladro percutor profesional con varios accesorios, ideal para perforar en materiales duros como cemento y ladrillo. ¡Perfecto para proyectos de bricolaje!</string>
    <string name="product_price_taladro">$79.99</string>

    <!-- Producto 4: Cafetera Espresso -->
    <string name="product_title_cafetera">Cafetera Espresso OSTER</string>
    <string name="product_description_cafetera">Cafetera espresso automática de alta calidad, ideal para preparar café expreso y cappuccino en la comodidad de tu hogar. ¡Un sabor inconfundible!</string>
    <string name="product_price_cafetera">$99.99</string>

    <string name="home_button_description">Ir a la pantalla principal</string>
    <string name="confirmation_message">¡Compra realizada con éxito!</string>
    <string name="back_to_store">Volver a la tienda</string>
    <string name="confirmation_icon_description">Icono de confirmación</string>


    <!-- Botón para Comprar (común para todos los productos) -->
    <string name="buy_button">Comprar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>