<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <!-- Imagen del Producto -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/taladro"
        android:contentDescription="@string/product_image" />

    <!-- Título del Producto -->
    <TextView
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_title_taladro"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:gravity="center" />

    <!-- Descripción del Producto -->
    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_description_taladro"
        android:textSize="14sp"
        android:paddingTop="25dp"
        android:gravity="start" />

    <!-- Sección de Precio y Botón de Comprar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="25dp">

        <!-- Precio del Producto -->
        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_taladro"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="start"/>

        <!-- Botón para Comprar -->
        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_button"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:background="@android:color/holo_blue_dark"/>
    </LinearLayout>

</LinearLayout>
